<resources>
    <string name="app_name">Thumper Controller</string>
    <string name="title_home">Neopixel</string>
    <string name="title_dashboard">Drive</string>
    <string name="title_notifications">Settings</string>
    <string name="infoText">Choose your RGB value and press the button!</string>
    <string name="title_activity_neopixel">Drive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_ip">IP Address</string>
    <string name="pref_port_name">Port</string>
    <string name="pref_nodjs_title">NodeJS Server</string>
    <string name="pref_mqtt_group">MQTT Server</string>
    <string name="pref_title_neopixel">NeoPixel</string>
    <string name="pref_neopixel_stringid">String ID</string>
    <string name="pref_mqtt_neopixels_title">Neopixels MQTT</string>
    <string name="pref_mqtt_topics">Topics</string>
    <string name="pref_mqtt_topics_sum">Change MQTT topics</string>
    <string name="pref_thum_sett_name">Thumper</string>
    <string name="perf_max_sped_title">Max speed</string>
    <string name="settings_fragment_title">Current settings</string>
    <string name="third_option">Touch</string>
</resources>
